# coherence

./: .env copy.production  .env.production  .eslintrc.json  .gitattributes.txt  .gitignore  .gitmodules  1on1consultation.md  2025-03-18-your-filename.md  BACKEND_VERIFICATION_RESULTS.md  CNAME  DEPLOYMENT-AND-IMPROVEMENTS-COMPLETE.md  DEPLOYMENT_CONFIGURATION_GUIDE.md  ENVIRONMENT-SETUP.md  ENV_FILES_SPLIT.md  ENV_UPDATE_INSTRUCTIONS.md  GitHub - Shortcut.lnk  IMPLEMENTATION-COMPLETE.md  Kushal_Samant_CV_2022.docx  Kushal_Samant_CV_2023.docx  Kushal_Samant_Employment_Certificate_KVSHVL.docx  PRICING_UNIFICATION_PLAN.md  PRICING_UNIFICATION_VERIFICATION_PLAN.md  PROJECT_TREE.txt  RAZORPAY_VERIFICATION_NEEDED.md  README-NEXTJS.md  README.md  REPOSITORY_AUDIT_REPORT.md  SCSS_IMPLEMENTATION_GUIDE.md  TESTING_GUIDE.md  TIER_NAMING_STANDARDIZATION_PLAN.md  WEBHOOK_CONFIGURATION.md  _config.yml  about.md  add-oauth-credentials.ps1  ai.md  akansha.md  anthologies.md  anthology.md  articles.md  ask.env.production  (+63 more)
.github/: IMPLEMENTATION_SUMMARY.md  SCSS_IMPLEMENTATION_GUIDE.md  STRIPE_BUSINESS_INFORMATION.md  WEBSITE_VALIDATION_REPORT.md  business.md  dependabot.yml  design-system.md  implementation.md  legal-compliance.md  production-status.md  setup.md  technical.md  testing.md
.vercel/: project (2).json
_includes/: youtube_embed.html
_layouts/: content.html  default-backup.html  default.html
_sass/: design-tokens.scss  jekyll-theme-minimal-darkgrey-background.scss  jekyll-theme-minimal-modern-architecture.scss  jekyll-theme-minimal-original.scss  kvshvl-components.scss  (+6 more)
(+2888 files in other folders)
