[tool.poetry]
name = "kvshvl-platform"
version = "1.0.0"
description = "KVSHVL Platform - Transform hand-drawn sketches into BIM models"
authors = ["Kushal Samant"]
readme = "README.md"
packages = [
    { include = "packages/shared-backend" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

